--- a/Weather-App/web-server/public/help.html
+++ b/Weather-App/web-server/public/help.html
@@ -8,7 +8,7 @@
 
     <body>
         <h2>Weather app</h2>
-        <img src="/img/dark.jpg"
+        <img src="/img/dark.jpg">
     </body>
 
 </html>
